--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,74 @@
 * {
      box-sizing: border-box !important;
 }
+/** our team**/
+/* Three columns side by side */
+.column {
+     float: left;
+     width: 33.3%;
+     margin-bottom: 16px;
+     padding: 0 8px;
+   }
+   
+   /* Display the columns below each other instead of side by side on small screens */
+   @media screen and (max-width: 650px) {
+     .column {
+       width: 100%;
+       display: block;
+     }
+   }
+   
+   /* Add some shadows to create a card effect */
+   .card {
+     box-shadow: 0 15px 25px 0 #76b4a5;
+   }
+   
+   /* Some left and right padding inside the container */
+   .container {
+     padding: 0 16px;
+   }
+   
+   /* Clear floats */
+   .container::after, .row::after {
+     content: "";
+     clear: both;
+     display: table;
+   }
+   
+   .title {
+     color: grey;
+   }
+   
+   .button {
+     font-size: 17px;
+     background-color: transparent;
+     color: #76b4a5;
+     padding: 8px 0px;
+     width: 100%;
+     max-width: 190px;
+     text-align: center;
+     display: inline-block;
+     border-radius: 30px;
+     border: #76b4a5 solid 3px;
+     transition: ease-in all 0.5s;
+   }
+   
+   .button:hover {
+     background: #76b4a5;
+     color: #fff !important;
+     transition: ease-in all 0.5s;
+   }
+
+
+
+
+
+
+/** our team **/
+      
+ 
+ 
+  
 
 html {
      scroll-behavior: smooth;
@@ -309,7 +377,7 @@ button {
      position: absolute;
      width: 100%;
      height: 98px;
-     margin-top: -20px;
+     margin-top: -3px;
      right: 0;
 }
 
@@ -355,12 +423,12 @@ button {
 
 .header {
      width: 100%;
-     background: #fff;
-     padding: 20px 0px;
+     background: #fff(58, 116, 106);
+     padding: 5px 0px;
 }
 
 .logo a {
-     font-size: 40px;
+     font-size: 0px;
      font-weight:bold;
      text-transform: uppercase;
      color: #fff;
