--- a/css/style.css
+++ b/css/style.css
@@ -34,14 +34,18 @@
 * {
      box-sizing: border-box !important;
 }
-/** our team**/
+/**------------------------------------------------------------------- our team----------------------------------------------------------------**/
 /* Three columns side by side */
 .column {
      float: left;
      width: 33.3%;
      margin-bottom: 16px;
-     padding: 0 8px;
+     padding: 8px 8px;
+     
    }
+   
+  
+
    
    /* Display the columns below each other instead of side by side on small screens */
    @media screen and (max-width: 650px) {
@@ -53,7 +57,8 @@
    
    /* Add some shadows to create a card effect */
    .card {
-     box-shadow: 0 15px 25px 0 #76b4a5;
+     box-shadow: 30px 0px 30px 15px #76b4a5;
+     size: -5px;
    }
    
    /* Some left and right padding inside the container */
@@ -69,7 +74,7 @@
    }
    
    .title {
-     color: grey;
+     color: #76b4a5;
    }
    
    .button {
@@ -105,6 +110,7 @@
 
 html {
      scroll-behavior: smooth;
+     margin-top: 40px;
 }
 
 body {
@@ -113,6 +119,7 @@ body {
      font-family: 'Poppins', sans-serif;
      line-height: 1.80857;
      font-weight: normal;
+     
 }
 
 a {
@@ -377,7 +384,7 @@ button {
      position: absolute;
      width: 100%;
      height: 98px;
-     margin-top: -3px;
+     margin-top: -40px;
      right: 0;
 }
 
@@ -424,7 +431,7 @@ button {
 .header {
      width: 100%;
      background: #fff(58, 116, 106);
-     padding: 5px 0px;
+     padding: 0px 0px;
 }
 
 .logo a {
@@ -434,7 +441,9 @@ button {
      color: #fff;
      line-height: 40px;
      margin-left: 60px;
-}
+    
+     
+}    
 
 
 /** banner section **/
